# webpagetraverser

./: .gitignore  .mailmap  AUTHORS  CMakeLists.txt  README  README.md  WebPageTraverser.pro  webpagetraverse.files  webpagetraverser.includes
src/: CMakeLists.txt  customwebpage.cpp  customwebpage.h  main.cpp  pagetraverser.cpp  pagetraverser.cpp.autosave  pagetraverser.h  webelement.cpp  webelement.h  webpagetraverser.h.in
